Closed Bug 1709629 Opened 4 years ago Closed 4 years ago

Nvidia Fermi crashes on shader compilation with 8.17.12.8026 driver

Categories

(Core :: Graphics: WebRender, defect)

Unspecified
Windows 7
defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox92 --- fixed

People

(Reporter: jrmuizel, Assigned: aosmond)

Details

Crash Data

Attachments

(1 file)

Rares, do you have a Nvidia Fermi GPU running Windows 7 that you can try with the 8.17.12.8026 driver to see if the GPU process crashes on startup?

Blocks: gfx-triage
Flags: needinfo?(rares.doghi)
Severity: -- → S3
OS: Unspecified → Windows 7

Hi Jeff, I googled a bit which one is a Fermi GPU and I do have the Nvidia GeForce GT 730 on my machine with windows 7, the problem is that the driver requested I can't find it anywhere, after googleing it for a bit.. there is a lot of people complaining about that specific version not with Firefox but games and other apps as well. I tried to find it with Advanced search on the Nvidia's Website but no luck.

If you have a safe link where I could download the driver and install it I would be happy to try it.
My current driver version is 26.21.14.4587 the oldest driver I could download, on the Nvidias website it seems that this is the oldest:
GeForce Game Ready Driver WHQL 445.87 April 15, 2020

It seems that 8.17.12.8026 might have release in 2011 ?

Flags: needinfo?(rares.doghi) → needinfo?(jmuizelaar)

It looks like the GT 730 is Kepler and not Fermi. You should be able to use this list to find a Fermi https://en.wikipedia.org/wiki/List_of_Nvidia_graphics_processing_units. You want a code name that starts with GF.

I believe this is the correct driver: https://www.nvidia.com/en-us/drivers/windows/280_26/win7-winvista-64bit-280-26-whql-driver/

Flags: needinfo?(jmuizelaar)

Hi Jeff, I was looking into it and it seems that we dont have any GeForce 400 or 500 series to test on, those GPU's are really old, we are talking with our IT department and we are trying to find a machine with that GPU. I will let you know if we get our hands on one of them.

Flags: needinfo?(jmuizelaar)
Crash Signature: [@ <unknown in nvwgf2umx.dll> | CVertexShader::CLS::FinalConstruct ]

JeffM ordered a card to test against this.

Flags: needinfo?(jmuizelaar)
Flags: needinfo?(jmuizelaar)

The Fermi card that I ordered isn't supported by this driver :( I was able to get the driver stood up on a Tesla card (there are some Tesla crashes) but it did not crash.

In triage we decided to just block the driver.

Assignee: nobody → aosmond
Flags: needinfo?(jmuizelaar)

drivers - 8.17.12.8019, 8.17.12.8026 | 8-3-2011

No longer blocks: gfx-triage
Attachment #9234974 - Attachment description: Bug 1709629 - Block NVIDIA drivers 8.17.12.8019/8026 on Windows 7. → Bug 1709629 - Block WebRender for NVIDIA drivers 8.17.12.8019/8026 on Windows 7.
Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e783ffbda924 Block WebRender for NVIDIA drivers 8.17.12.8019/8026 on Windows 7. r=jrmuizel
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: