Bug 1709629 - Block WebRender for NVIDIA drivers 8.17.12.8019/8026 on Windows 7. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D121916