widget/windows/GfxInfo.cpp
@@ -1833,6 +1833,14 @@ const nsTArray<GfxDriverInfo>& GfxInfo::GetGfxDriverInfo() {
                                 DRIVER_LESS_THAN_OR_EQUAL, V(8, 56, 1, 16),
                                 "CRASHY_DRIVERS_BUG_1678808");
 
+    // Shader compilation startup crashes with WebRender on Windows 7.
+    APPEND_TO_DRIVER_BLOCKLIST_RANGE(
+        OperatingSystem::Windows7, DeviceFamily::NvidiaAll,
+        nsIGfxInfo::FEATURE_WEBRENDER,
+        nsIGfxInfo::FEATURE_BLOCKED_DRIVER_VERSION, DRIVER_BETWEEN_INCLUSIVE,
+        V(8, 17, 12, 8019), V(8, 17, 12, 8026), "FEATURE_FAILURE_BUG_1709629",
+        "nVidia driver > 280.26");
+
     ////////////////////////////////////
     // FEATURE_WEBRENDER - ALLOWLIST
     APPEND_TO_DRIVER_BLOCKLIST2_EXT(
